<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity">

    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_login"
        android:layout_margin="8dp"
        android:text="@string/no_data"
        />
    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_login"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_name"
        app:layout_constraintTop_toBottomOf="@+id/label_login"
        android:layout_margin="8dp"
        android:text="@string/no_data"
        />

    <TextView
        android:id="@+id/label_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_followers"
        app:layout_constraintTop_toBottomOf="@+id/label_name"
        android:layout_margin="8dp"
        android:text="@string/no_data"
        />
    <TextView
        android:id="@+id/label_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_followers"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tvRepos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_repos"
        app:layout_constraintTop_toBottomOf="@+id/label_followers"
        android:layout_margin="8dp"
        android:text="@string/no_data"
        />
    <TextView
        android:id="@+id/label_acc_creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_creation_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_repos"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tvAccCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_acc_creation_date"
        app:layout_constraintTop_toBottomOf="@+id/label_repos"
        android:layout_margin="8dp"
        android:text="@string/no_data"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>